[project]
name = "toybox_core"
description = "toy robotics stack core"
version = "0.0.1"
authors = [
    {name = "Wes Fletcher", email = "please@donot.com"},
]
readme = "README.md"

requires-python = ">=3.8.2"
dependencies = [
    "protobuf",
    "grpcio", # gRPC
    "grpcio-tools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "scripts/*",
    "src/*.py"
]
exclude = [
    "test/*"
]

[tool.hatch.build.targets.sdist.force-include]
"scripts/server.py" = "toybox_core/server.py"

[tool.hatch.build.targets.wheel.force-include]
"scripts/server.py" = "toybox_core/server.py"

[project.scripts]
tbx-server = "toybox_core.scripts.server:main"