[project]
name = "toybox_msgs"
description = "Simple (toy) robotics stack messages"
version = "0.0.1"
authors = [
    {name="Wes Fletcher", email="please@donot.com"},
]
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "protobuf",
    "grpcio", # gRPC
    "grpcio-tools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/core", 
    "src/primitives", 
    "src/state"
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "src/*"
]
exclude = [
    "/build_messages"
]