[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toybox_msgs"
description = "Simple (toy) robotics stack messages"
version = "0.0.1"
authors = [
    {name="Wes Fletcher", email="please@donot.com"},
]
maintainers = [
  {name = "Wes Fletcher", email = "please@donot.com"}
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    # "protobuf",
    "grpcio", # gRPC
    "grpcio-tools",
]

[project.urls]
"Source" = "https://github.com/wesfletch/toybox"

# [tool.hatch.metadata]
# sources = [ # I don't think this actually exists
#     {path = "src"}
# ]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
# packages = [
#     "src/core", 
#     "src/primitives", 
#     "src/state"
# ]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
#include = [
#    "src/*"
#]
#exclude = [
#    "/build_messages"
#]