[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toybox_msgs"
description = "Simple (toy) robotics stack messages"
version = "0.0.1"
authors = [
    {name="Wes Fletcher", email="please@donot.com"},
]
maintainers = [
  {name = "Wes Fletcher", email = "please@donot.com"}
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    # "protobuf",
    "grpcio", # gRPC
    "grpcio-tools",
]

[project.urls]
"Source" = "https://github.com/wesfletch/toybox"
