[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toybox_sim"
version = "0.0.1"
authors = [
    { name="Wes Fletcher", email="please@donot.com" },
]
description = "Simple (toy) robotics simulation"
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    "pyglet",
    "moderngl",
    "toybox_core",
    "toybox_msgs"
]

[project.urls]
"Source" = "https://github.com/wesfletch/toybox"
