[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toybox_sim"
version = "0.0.1"
authors = [
    { name="Wes Fletcher", email="please@donot.com" },
]
description = "Simple (toy) robotics simulation"
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.8"
dependencies = [
    "pyglet",
    "moderngl",
    "toybox_core",
    "toybox_msgs"
]

[project.urls]
"Source" = "https://github.com/wesfletch/toybox"

[project.scripts]
tbx-sim = "toybox_sim.scripts.simulate:main"

[project.entry-points."tbx.nodes"]
ToyboxSim = "toybox_sim.simulation:Simulation"

[tool.toybox]
launch-files = ["launch"]
message-files = []
resources = ["resources"]